--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript",
+  "name": "testing-custom-react-componentn",
   "version": "0.1.0",
   "private": true,
   "main": "src/index.tsx",
@@ -30,5 +30,7 @@
     "@types/react": "16.x",
     "@types/react-dom": "16.x",
     "typescript": "2.9.x"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
